# mosh-fcgi

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.cxxopts  README  TODO  ar-merge  autogen.sh  build.sh  configure.ac  doc.hpp  doxygen  mosh_fcgi.pc.in
examples/: Makefile  Makefile.am  echo-form.html  echo.cpp  filter.cpp  koi8r.cpp  raw-echo.cpp  show-gnu.cpp  showgnu.cpp  timer.cpp  upload.cpp  upload.html  utf8-helloworld-cgi.cpp  utf8-helloworld.cpp
examples/echo/: Makefile  Makefile.am  echo.cpp  echo.html
examples/filter/: Makefile  Makefile.am  filter.cpp
examples/raw-echo/: Makefile  Makefile.am
examples/show-gnu/: Makefile  Makefile.am  show-gnu.cpp
examples/timer/: Makefile  Makefile.am  timer.cpp
examples/upload/: Makefile  Makefile.am  upload.cpp
examples/utf8-helloworld/: Makefile  Makefile.am  utf8-helloworld.cpp
include/: Makefile  Makefile.am  headerlist  mk-headerlist.sh
include/fastcgipp-mosh/: exceptions.hpp  fcgistream.hpp  http.hpp  manager.hpp  protocol.hpp  request.hpp  transceiver.hpp  unicode.hpp
include/fastcgipp-mosh/bits/: append_or_assign.hpp  boyer_moore.hpp  cmp.hpp  singleton.hpp  stdint.hpp  utf8_cvt.hpp  vec_ops.hpp
include/fastcgipp-mosh/bits/http/: url.hpp
include/fastcgipp-mosh/http/: form.hpp  http.hpp  http.tcc
include/mosh/fcgi/: boyer_moore.hpp  cgi_request.hpp  exceptions.hpp  fcgistream.hpp  http.hpp  manager.hpp  protocol.hpp  request.hpp  transceiver.hpp  unicode.hpp
include/mosh/fcgi/bits/: aligned.hpp  array_deleter.hpp  block.hpp  boyer_moore.hpp  ci_strcomp.hpp  cmp.hpp  gs.hpp  hash.hpp  iconv.hpp  iconv.tcc  iconv_cvt.hpp  iconv_gs.hpp  iterator_plus_n.hpp  iterator_range_check.hpp  locked.hpp  namespace.hpp  native_utf.hpp  popcount.hpp  rwlock.hpp  singleton.hpp  t_string.hpp  tempfile.hpp  types.hpp  u.hpp  utf8.hpp  utf8_cvt.hpp
include/mosh/fcgi/fcgistream/: fcgistream.hpp  fcgistream.tcc
include/mosh/fcgi/html/: element.hpp  html_doctype.hpp  sgml_doctype.hpp  xml_declaration.hpp
include/mosh/fcgi/html/element/: s.hpp  ws.hpp
include/mosh/fcgi/http/: conv.hpp  cookie.hpp  form.hpp  header.hpp  misc.hpp  session.hpp
include/mosh/fcgi/http/conv/: base64.hpp  converter.hpp  qp.hpp  url.hpp
include/mosh/fcgi/http/header/: header.hpp  helper.hpp
include/mosh/fcgi/http/helpers/: content_type.hpp  helper.hpp  redirect.hpp  response.hpp  status.hpp  status_helper.hpp  x_sendfile.hpp
include/mosh/fcgi/http/session/: fcgi_session.hpp  funcs.hpp  session.hpp  session.tcc  session_base.hpp  session_base.tcc
include/mosh/fcgi/manager/: manager.hpp  manager.tcc
include/mosh/fcgi/protocol/: begin_request.hpp  end_request.hpp  full_id.hpp  funcs.hpp  gs.hpp  header.hpp  management_reply.hpp  message.hpp  types.hpp  unknown_type.hpp  vars.hpp
include/src/: u.hpp
src/: MakeMake  Makefile  Makefile.am  _dummy.cpp  base64.cpp  boyer_moore.cpp  codecvt_ic.cpp  converter.cpp  exceptions.cpp  fcgistream.cpp  http_misc.cpp  manager.cpp  protocol.cpp  qp.cpp  request.cpp  tempfile.cpp  transceiver.cpp  unicode.cpp  url.cpp  utf8.cpp  utf8_cvt.cpp
src/bits/: boyer_moore.cpp  cmp.cpp  hash.cpp  rwlock.cpp  tempfile.cpp  utf8.cpp
src/bits/sha/: config.h  rotl.h  sha1.c  sha1.h
src/html/: element.cpp  html_doctype.cpp
src/http/: base64.cpp  converter.cpp  cookie.cpp  lut.hpp  mime.cpp  misc.cpp  qp.cpp  session-timpl.cpp  session.cpp  url.cpp
src/http/header/: content_type.cpp  cookie.cpp  header.cpp  helper.cpp  redirect.cpp  response.cpp  status.cpp  x_sendfile.cpp
src/http/header_helper/: content_type.cpp  redirect.cpp  response.cpp  status.cpp  status_helper.cpp  x_sendfile.cpp
src/include/src/: array_deleter.hpp  namespace.hpp  protocol.hpp  singleton.hpp  u.hpp  utf8.hpp  utility.hpp
src/include/src/http/: header_default.hpp  mime.hpp
src/protocol/: funcs.cpp  message.cpp  vars.cpp
